<resources>
    <string name="app_name">SparkScholar</string>
    <string name="to_get_started_enter_your_n_username_and_password">To get started, enter your\n username and password</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_your_account">Create your account</string>
    <string name="create">Create</string>
    <string name="email">Email</string>
    <string name="click_to_register">Click to register</string>
    <string name="click_to_login">click_to_login</string>
    <string name="browse_courses">Browse Courses</string>
</resources>